Spelling corrections by Sebastian

--- a/dokumentation/src/abnahme.tex
+++ b/dokumentation/src/abnahme.tex
@@ -1,7 +1,7 @@
 \section{Abnahmephase}
 \label{section:abnahmephase}
 Nach Abschluss der Implementierungsphase wurde das Projekt, wie zuvor mit der
-Abteilung für Datenverarbeitung abgesprochen, sowohl dem Abteilungsleiter im Einzelgespräch,
+Abteilung für Datenverarbeitung abgesprochen, sowohl dem Abteilungsleiter im Einzelgespräch
 als auch der gesamten Abteilung in Form einer Präsentation vorgestellt.
 
 Das Hauptaugenmerk und die Vorgehensweise war in beiden Fällen jedoch unterschiedlich
@@ -9,7 +9,7 @@ und wird in den folgenden Abschnitten erläutert.
 
 \subsection{Code-Flight mit der Abteilungsleitung}
 
-Um die Qualität des Codes zu gewährleisten wurde für das Projekt die Abnahme über einen Code-Flight\footnote{zu deutsch ''Programm-Flug'' - bei dieser Technik erklärt eine Person dem Zuhörer laut den Code und beschreibt was dessen Funktion ist.} festgelegt. Diese einstündige
+Um die Qualität des Codes zu gewährleisten, wurde für das Projekt die Abnahme über einen Code-Flight\footnote{zu deutsch "`Programm-Flug"´ - bei dieser Technik erklärt eine Person dem Zuhörer laut den Code und beschreibt was dessen Funktion ist.} festgelegt. Diese einstündige
 Vorführung des Codes wurde mit dem Abteilungsleiter Sebastian Freundt im
 Vier-Augen-Gespräch vollzogen und gestaltete sich wie folgt:
 
@@ -25,7 +25,7 @@ Vier-Augen-Gespräch vollzogen und gestaltete sich wie folgt:
 \subsection{Präsentation des Programms}
 
 Nach dem Code-Flight mit dem Abteilungsleiter wurde für das gesamte Team der Abteilung Datenverarbeitung ebenfalls eine Präsentation gehalten.
-Diese beschränkte sich im Inhalt jedoch auf die Grundprinzipien des Algorithmus, sowie
+Diese beschränkte sich im Inhalt jedoch auf die Grundprinzipien des Algorithmus sowie
 die Funktion und Nutzung des CLI-Programms. Unter anderem wurden verfügbare
 Parameter und maximal zulässige Dateigrößen erläutert.
 Abschließend wurde ein Post Mortem gehalten und die gewonnenen Erkenntnisse in Bezug auf die Arbeit mit Kanban und der testgetriebenen Entwicklung erläutert.
