--- a/dokumentation/src/dokumentationsphase.tex
+++ b/dokumentation/src/dokumentationsphase.tex
@@ -12,4 +12,8 @@ Dieser Aufruf erzeugt eine kurze Beschreibung des Programms und dessen Parameter
 
 \subsection{Entwicklerdokumentation}
 Die Entwicklerdokumentation des Codes findet über einen
-Dokumentationsblock oberhalb der Signatur jeder Funktion statt. Dieser Block beinhaltet eine kurze Beschreibung der Funktionsweise der Routine, sowie die Namen und erwarteten Datentypen der Funktionsparameter. Die Formatierung ist ReStructuredText( kurz ReST), kann mit Hilfe von Dokumentationstools ausgelesen und später als eine lokale Webseite mit automatisch generierten Verlinkungen ausgegeben werden.
+Dokumentationsblock oberhalb der Signatur jeder Funktion statt. Dieser Block
+beinhaltet eine kurze Beschreibung der Funktionsweise der Routine sowie die
+Namen und erwarteten Datentypen der Funktionsparameter. Die Formatierung ist
+ReStructuredText (kurz ReST), kann mit Hilfe von Dokumentationstools ausgelesen
+und später als eine lokale Webseite mit automatisch generierten Verlinkungen ausgegeben werden.
