--- a/dokumentation/src/implementierung.tex
+++ b/dokumentation/src/implementierung.tex
@@ -6,7 +6,7 @@ Aufgabenpaketen aus dem Pflichtenheft populiert. Hierzu wurden Tests und deren
 dazugehörige Funktionen betrachtet und als Arbeitspaket beschrieben.
 
 \subsection{Implementierung der Datenstrukturen}
-Wie bereits im vorherigen Abschnitt erwähnt, werden zwei spezielle Datenstrukturen für das Programm benötigt - Hashmaps und dynamisch wachsende Arrays.
+Wie bereits im vorherigen Abschnitt erwähnt, werden zwei spezielle Datenstrukturen für das Programm benötigt -- Hashmaps und dynamisch wachsende Arrays.
 
 \subsubsection{Implementierung der Hashmap}
 
