--- a/dokumentation/src/intro.tex
+++ b/dokumentation/src/intro.tex
@@ -63,9 +63,9 @@ vertreten durch Sebastian Freundt.\par
 Während die Hauptziele des Projekts das Vergleichen mehrerer hunderttausend Symbole und die effiziente Gestaltung dieser Vergleiche sind, sind folgende Themen explizit nicht Teil der Aufgabe:
 
 \begin{itemize}
-    \item Datenintegrität - Die Überprüfung des Datenformats ist nicht Teil des Aufgabenfeldes.
-    \item Datenverifizierung - Die Prüfung, ob \textbf{eingehende} Daten korrekt sind, fällt nicht in das Aufgabenfeld.
-    \item Datenbereitstellung - Die Bereitstellung der verarbeiteten Daten (z.B. als Datenbank o.Ä.) ist ebenfalls nicht Teil des Projekts.
+    \item Datenintegrität -- Die Überprüfung des Datenformats ist nicht Teil des Aufgabenfeldes.
+    \item Datenverifizierung -- Die Prüfung, ob \textbf{eingehende} Daten korrekt sind, fällt nicht in das Aufgabenfeld.
+    \item Datenbereitstellung -- Die Bereitstellung der verarbeiteten Daten (z.B. als Datenbank o.Ä.) ist ebenfalls nicht Teil des Projekts.
 \end{itemize}
 \clearpage
 
