--- a/dokumentation/src/postmortem.tex
+++ b/dokumentation/src/postmortem.tex
@@ -1,18 +1,20 @@
 \section{Fazit}
 \label{section:postmortem}
-\subsection{Soll- /Ist-Vergleich}
+\subsection{Soll- / Ist-Vergleich}
 Rückblickend kann festgehalten werden, dass alle im Pflichtenheft
 abgesprochenen Funktionen und Anforderungen eingehalten worden sind
 und zur vollsten Zufriedenheit des Auftraggebers geliefert wurden. Hierbei
 spielt die Entscheidung, die Einbindung des C-Codes in Python zu streichen, sicherlich
-eine elementare Rolle. Wie man erkennen kann, wurden die freigewordenen Stunden effektiv ausgenutzt um den Anforderungen des Projekts gerecht zu werden. Die von der IHK vorgegebenen 70 Stunden wurden dabei konsequent eingehalten.
+eine elementare Rolle. Wie man erkennen kann, wurden die freigewordenen Stunden effektiv
+ausgenutzt um den Anforderungen des Projekts gerecht zu werden. Die von der IHK vorgegebenen 70 Stunden wurden dabei konsequent eingehalten.
 
 \subsection{Post Mortem}
 
-Vor allem während der Entwurfsphase konnte der Autor von seinen Kenntnissen aus dem Projektmanagement profitieren. Besonder bei den Nutzwertanalysen waren diese besonders hilfreich. Weiter erwies sich die Anwendung der
+Vor allem während der Entwurfsphase konnte der Autor von seinen Kenntnissen aus dem Projektmanagement profitieren.
+Besonders bei den Nutzwertanalysen waren diese hilfreich. Weiter erwies sich die Anwendung der
 testgetriebenen Entwicklung als große Unterstützung. So wurden lästige Segmentation Faults frühzeitig erkannt und die Funktionen (und somit das gesamte Programm) konnten zügiger fertiggestellt werden.
 Auch das genutzte Kanban-Board erwies sich als großartiges Werkzeug, um Prozesse und deren Fortschritt zu dokumentieren.
-Kurze Kommunikations- und Entscheidungswege ermöglichten eine agile Entwicklung der Projekts und werden
+Kurze Kommunikations- und Entscheidungswege ermöglichten eine agile Entwicklung des Projekts und werden
 dem Autor auch weiterhin als ein wichtiger Baustein produktiver Arbeitsumgebungen in Erinnerung bleiben.
 
 \subsection{Ausblick}
@@ -27,8 +29,8 @@ Schlussendlich bleiben noch zwei Punkte, welche in Zukunft angegangen werden kö
 
 \item Die Optimierung der Programmlogik \\
     \begin{itemize}
-        \item Verfeinerung der Hashmap: Da die maximale Anzahl an Schlüsselwörten bekannt ist, kann die Hashmap dahingehend angepasst werden, dass exakt so viele ''Felder'' im Speicher reserviert werden wie nötig
-        \item Das Auswahlkriterium kann als Funktion implementiert und der Vergleichsfunktion als Pointer übergeben werden. So können Änderungen unkomplizierter realisiert werden
+        \item Verfeinerung der Hashmap: Da die maximale Anzahl an Schlüsselworten bekannt ist, kann die Hashmap dahingehend angepasst werden, dass exakt so viele "`Felder"´ im Speicher reserviert werden wie nötig
+        \item Das Auswahlkriterium kann als Funktion implementiert und der Vergleichsfunktion als Pointer übergeben werden -- so können Änderungen unkomplizierter realisiert werden
     \end{itemize}
 
 
