--- a/dokumentation/src/projektplanung.tex
+++ b/dokumentation/src/projektplanung.tex
@@ -20,7 +20,7 @@ zugewiesen wurden, stattdessen der Optimierung des C-Programms zuzuweisen.
 
 \subsection{Ressourcenplanung}
 In der Ressourcenplanung finden sich sämtliche Einheiten aufgelistet, die für
- die Realisierung des Projektes benötigt wurden. Hierbei ist zu erwähnen, dass mit ''Einheiten'' Hard- und Softwareressourcen, sowie personelle Ressourcen gemeint sind.
+ die Realisierung des Projektes benötigt wurden. Hierbei ist zu erwähnen, dass mit "`Einheiten"´ Hard- und Softwareressourcen, sowie personelle Ressourcen gemeint sind.
  Die Auflistung der Ressourcen kann im Abschnitt \ref{auszug:ressourcen} des Anhangs eingesehen werden.
 
 \subsection{Entwicklungsprozess}
@@ -45,7 +45,7 @@ die fünf Stufen, in welche der Autor die Implementierungsphase unterteilt hat, 
     vom Auftraggeber überprüft und unterschrieben worden.
 \end{itemize}
 
-Das Augenmerk liegt hierbei vor allem auf der Spalte ''Verifizierung''.
+Das Augenmerk liegt hierbei vor allem auf der Spalte "`Verifizierung"´.
 Dieser bereichert den Entwicklungsprozess um einen formellen, fest vorgesehenen
 Zeitpunkt zur Feedback-Kommunikation. So können frühzeitig, möglicherweise notwendige Anpassungen geäußert und unter Umständen noch umgesetzt werden. Wichtig hierbei ist, dass die Überprüfung nicht im Rahmen eines Meetings geschieht, da sonst der Entwicklungsprozess gestört wird. Ein Feedback zu den einzelnen Arbeitspaketen wird ausschließlich über das Kanbanboard kommuniziert.\par
 
