fixed equation syntax errors

--- a/dokumentation/src/analysephase.tex
+++ b/dokumentation/src/analysephase.tex
@@ -14,7 +14,7 @@ bereits verglichen und sortiert bereitstellt.\par
 
 Es besteht ein theoretischer Lösungsansatz auf Basis der Damerau-Levenshtein-Distanz\footnote{Die Damerau-Levenshtein-Distanz\cite{dl_distance} beschreibt die minimale Anzahl
 	an Operationen, welche benötigt werden, um einen String A in einen zu
-	vergleichenden String B zu verwandeln} (kurz: DLD). Dieser sieht vor, eine $M\timesM$-Matrix zu generieren, wobei M sämtliche Symbole aller
+	vergleichenden String B zu verwandeln} (kurz: DLD). Dieser sieht vor, eine $\text{M} \times \text{M}$ -Matrix zu generieren, wobei M sämtliche Symbole aller
 Anbieter darstellt. Dies resultiert in einem ca. 23 PetaBytes großem Datenobjekt
 im Arbeitsspeicher unserer Systeme und führt erwartungsgemäß zu Speicherüberläufen.
 In Rechenaufrufen ausgedrückt bedeutet dies, dass etwa \\
@@ -66,9 +66,9 @@ Als nächstes wurden die Projektkosten berechnet. Hierfür wurden pauschale Betr
 für Mitarbeiterstundenlöhne sowie Kosten für Räumlichkeiten, Strom und sonstige Utensilien 
 (Papier, Drucker, Programme, Rechner, etc.) veranschlagt. Diese können in der Tabelle im
 Anhang (Abschnitt \ref{tabelle:projektkosten}) eingesehen werden. Es wurden hierfür
-ein Stundenlohn von 5,50\euro für den Autoren, sowie ein Stundenlohn von 35\euro für jeden
+ein Stundenlohn von 5,50\euro für den Autoren, sowie ein Stundenlohn von 35\euro  für jeden
 weiteren Mitarbeiter angesetzt. Nutzungskosten der Räumlichkeiten, Rechner, Software
-und weiterer Utensilien wurden mit 20\euro pro Stunde kalkuliert. \par
+und weiterer Utensilien wurden mit 20\euro  pro Stunde kalkuliert. \par
 
 
 \subsubsection{Amortisationsdauer}
@@ -85,18 +85,18 @@ Anhand dieser Werte lassen sich folgende Amortisationsdauern errechnen:\\
 
 \textbf{Bester Fall}: \\
 \\
-$\frac{3.883,75\text{\euro}}{550\frac{\text{\euro}}{\text{Woche}} \times 80\text{\%}}} \approx 9 Wochen$
+$\frac{3.883,75\text{\euro}}{550\frac{\text{\euro}}{\text{Woche}} \times 80\text{\%}} \approx 9 \text{Wochen}$
 \\
 
 \textbf{Wahrscheinlichster Fall}:\\
 \\
-$\frac{3.883,75\text{\euro}}{550\frac{\text{\euro}}{\text{Woche}} \times 55\text{\%}}} \approx 13 Wochen$
+$\frac{3.883,75\text{\euro}}{550\frac{\text{\euro}}{\text{Woche}} \times 55\text{\%}} \approx 13 \text{Wochen}$
 \\
 
 
 \textbf{Schlechtester Fall}:\\
 \\
-$\frac{3.883,75\text{\euro}}{500\frac{\text{\euro}}{\text{Woche}} \times 30\text{\%}}} \approx 24 Wochen$
+$\frac{3.883,75\text{\euro}}{500\frac{\text{\euro}}{\text{Woche}} \times 30\text{\%}} \approx 24 \text{Wochen}$
 \\
 
 \subsection{Lastenheft / Fachkonzept}
