added labels for anhang sections

--- a/dokumentation/src/anhang.tex
+++ b/dokumentation/src/anhang.tex
@@ -4,6 +4,8 @@
 
 \begin{landscape}
 \section{Diagramme und Grafiken}
+\label{section:figures}
+
 \subsection{Geschäftslogik}
     \begin{figure}[!htp]
        \centering
@@ -48,6 +50,7 @@
 \clearpage
 \begin{landscape}
 \section{Tabellen}
+\label{section:tabellen}
 
 \begin{table}[!htp]
 	\centering
@@ -192,6 +195,7 @@ Datenstrukturen & 10.00\% & 3 & 0.3 & 4 & 0.4 & 5 & 0.5 & 5 & 0.5 \\
 
 \clearpage
 \section{Auszüge}
+\label{section:textAuszüge}
 \subsection{Ressourcen}
 \label{auszug:ressourcen}
 \textbf{Hardware}
@@ -218,9 +222,9 @@ Datenstrukturen & 10.00\% & 3 & 0.3 & 4 & 0.4 & 5 & 0.5 & 5 & 0.5 \\
 
 
 \subsection{Lastenheft}
+\label{auszug:lastenheft}
 \renewcommand{\labelenumii}{\theenumii}
 \renewcommand{\theenumii}{\theenumi.\arabic{enumii}.}
-\label{auszug:lastenheft}
 \begin{enumerate}
 	\item Spezifikationen des Algorithmus
 	\begin{enumerate}
@@ -302,6 +306,7 @@ Datenstrukturen & 10.00\% & 3 & 0.3 & 4 & 0.4 & 5 & 0.5 & 5 & 0.5 \\
 \clearpage
 
 \section{Codeauszüge}
+\label{section:codeAuszüge}
 
 \lstinputlisting[language=C, basicstyle=\tiny, caption=Pseudocode des zu implementierenden Algorithmus, label=listing:pseudocode]{anhang/pseudo.c}
 
