fixed refs for projektplanung.tex

--- a/dokumentation/src/ProjektDoku_Winter2017.tex
+++ b/dokumentation/src/ProjektDoku_Winter2017.tex
@@ -1,5 +1,5 @@
 %---------------------------------------------------------------------------
-\documentclass[fontsize=11pt,paper=a4,draft=off,titlepage=off, twoside]{scrartcl}
+\documentclass[fontsize=11pt,paper=a4,draft=off,titlepage=off, oneside]{scrartcl}
 %---------------------------------------------------------------------------
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
