--- a/dokumentation/src/abnahme.tex
+++ b/dokumentation/src/abnahme.tex
@@ -9,7 +9,7 @@ und wird in den folgenden Abschnitten erläutert.
 
 \subsection{Code-Flight mit der Abteilungsleitung}
 
-Um die Qualität des Codes zu gewährleisten, wurde für das Projekt die Abnahme über einen Code-Flight\footnote{zu deutsch "`Programm-Flug"´ - bei dieser Technik erklärt eine Person dem Zuhörer laut den Code und beschreibt was dessen Funktion ist.} festgelegt. Diese einstündige
+Um die Qualität des Codes zu gewährleisten, wurde für das Projekt die Abnahme über einen Code-Flight\footnote{zu deutsch "`Programm-Flug"' - bei dieser Technik erklärt eine Person dem Zuhörer laut den Code und beschreibt was dessen Funktion ist.} festgelegt. Diese einstündige
 Vorführung des Codes wurde mit dem Abteilungsleiter Sebastian Freundt im
 Vier-Augen-Gespräch vollzogen und gestaltete sich wie folgt:
 
