--- a/dokumentation/src/anhang.tex
+++ b/dokumentation/src/anhang.tex
@@ -1,10 +1,10 @@
 \appendix
-\label{section:anhang}
+\label{sec:anhang}
 
 
 \begin{landscape}
 \section{Diagramme und Grafiken}
-\label{section:figures}
+\label{sec:figures}
 
 \subsection{Geschäftslogik}
     \begin{figure}[!htp]
@@ -50,7 +50,7 @@
 \clearpage
 \begin{landscape}
 \section{Tabellen}
-\label{section:tabellen}
+\label{sec:tabellen}
 
 \begin{table}[!htp]
 	\centering
@@ -195,7 +195,7 @@ Datenstrukturen & 10.00\% & 3 & 0.3 & 4 & 0.4 & 5 & 0.5 & 5 & 0.5 \\
 
 \clearpage
 \section{Auszüge}
-\label{section:textAuszüge}
+\label{sec:textAuszüge}
 \subsection{Ressourcen}
 \label{auszug:ressourcen}
 \textbf{Hardware}
@@ -306,7 +306,7 @@ Datenstrukturen & 10.00\% & 3 & 0.3 & 4 & 0.4 & 5 & 0.5 & 5 & 0.5 \\
 \clearpage
 
 \section{Codeauszüge}
-\label{section:codeAuszüge}
+\label{sec:codeAuszüge}
 
 \lstinputlisting[language=C, basicstyle=\tiny, caption=Pseudocode des zu implementierenden Algorithmus, label=listing:pseudocode]{anhang/pseudo.c}
 
