--- a/dokumentation/src/postmortem.tex
+++ b/dokumentation/src/postmortem.tex
@@ -29,7 +29,7 @@ Schlussendlich bleiben noch zwei Punkte, welche in Zukunft angegangen werden kö
 
 \item Die Optimierung der Programmlogik \\
     \begin{itemize}
-        \item Verfeinerung der Hashmap: Da die maximale Anzahl an Schlüsselworten bekannt ist, kann die Hashmap dahingehend angepasst werden, dass exakt so viele "`Felder"´ im Speicher reserviert werden wie nötig
+        \item Verfeinerung der Hashmap: Da die maximale Anzahl an Schlüsselworten bekannt ist, kann die Hashmap dahingehend angepasst werden, dass exakt so viele "`Felder"' im Speicher reserviert werden wie nötig
         \item Das Auswahlkriterium kann als Funktion implementiert und der Vergleichsfunktion als Pointer übergeben werden -- so können Änderungen unkomplizierter realisiert werden
     \end{itemize}
 
